Added functions lol

--- a/RaylibAdditions.vcxproj.filters
+++ b/RaylibAdditions.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RaylibAdditions.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RaylibAdditions.cpp">
